<resources>
    <string name="app_name">Thirty</string>
    <string name="results_title">Results</string>
    <string name="throw_button">Throw</string>
    <string name="player_heading">Player:</string>
    <string name="player_text">NULL</string>
    <string name="score_heading">Score:</string>
    <string name="player_score">0</string>
    <string name="throws_heading">Throws:</string>
    <string name="player_throws">0</string>
    <string name="select_button">Select</string>
    <string name="new_game_button">New Game</string>
    <string name="wrong_choice">Something is wrong with your choice, please try again.</string>
    <string name="type_title">Type</string>
    <string name="score_title">Score</string>
    <string name="click_throw">Press throw to begin the game!</string>
    <string name="game_over">Game Over!</string>
    <string name="total">Total</string>
    <string name="die">Die</string>
    <string name="s3">Low</string>
    <string name="s4">4</string>
    <string name="s5">5</string>
    <string name="s6">6</string>
    <string name="s7">7</string>
    <string name="s8">8</string>
    <string name="s9">9</string>
    <string name="s10">10</string>
    <string name="s11">11</string>
    <string name="s12">12</string>
    <string name="zero">0</string>

    <string-array name="number_list">
        <item>Low</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
